terraform-provision-infra/archive/agones-version/kubernetes-deployment/iap-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: stable-diffusion-nginx-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Creates a NEG after an Ingress is created
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
  labels:
    app: stable-diffusion-nginx
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: stable-diffusion-nginx
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sd-agones-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: $IP_NAME
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: stable-diffusion-nginx-service # Name of the Service targeted by the Ingress
      port:
        number: 8080 # Should match the port used by the Service
